<resources>
    <string name="app_name">BSC</string>
    <string name="navigation_drawer_open"> Open Navigation Drawer</string>
    <string name="navigation_drawer_close"> Close Navigation Drawer</string>
    <string name="priority_1">1</string>
    <string name="priority_2">2</string>
    <string name="priority_3">3</string>

    <!-- Strings for AddTaskActivity -->
    <!-- This edit task has a unicode character for "..." = "&#8230;" -->
    <string name="task_description">Task Description&#8230;</string>
    <string name="priority">Priority</string>

    <string name="high_priority">High</string>
    <string name="med_priority">Medium</string>
    <string name="low_priority">Low</string>

    <string name="add_button">Add</string>
</resources>
