<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    android:paddingBottom="16dp"
    android:paddingEnd="16dp"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingStart="16dp"
    android:paddingTop="16dp">

    <EditText
        android:id="@+id/edittask"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="start"
        android:hint="@string/task_description"
        android:paddingBottom="16dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:textColor="@color/colorAccent"
        style="@style/TextAppearance.AppCompat.Medium"
        android:text="@string/priority"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"/>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center"
            android:weightSum="3">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="?android:attr/buttonBarButtonStyle"
                android:textColor="@android:color/primary_text_light"
                android:id="@+id/Priority1"
                android:background="@color/red"
                android:text="@string/high_priority"
                android:layout_weight="1"
                android:onClick="onSelectPrioirity"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="?android:attr/buttonBarButtonStyle"
                android:textColor="@android:color/primary_text_light"
                android:id="@+id/Priority2"
                android:background="@color/green"
                android:text="@string/med_priority"
                android:layout_weight="1"
                android:onClick="onSelectPriority"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="?android:attr/buttonBarButtonStyle"
                android:textColor="@android:color/primary_text_light"
                android:id="@+id/Priority3"
                android:background="@color/blue"
                android:text="@string/low_priority"
                android:layout_weight="1"
                android:onClick="onSelectPriority"/>

        </LinearLayout>

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center"
            android:weightSum="3">

            <RadioButton
                android:id="@+id/rButton1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:theme="@style/WhiteRadioButton"/>

            <RadioButton
                android:id="@+id/rButton2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:theme="@style/WhiteRadioButton"/>

            <RadioButton
                android:id="@+id/rButton3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:theme="@style/WhiteRadioButton"/>


        </RadioGroup>

    </FrameLayout>

    <Button
        android:id="@+id/addButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/add_button"
        style="@style/TextAppearance.AppCompat.Large"
        android:textColor="@android:color/primary_text_dark"
        android:background="@drawable/gradient_bg"
        />

</LinearLayout>